RESOLVED FIXED Bug 40133
AX: need ListItemRole and PresentationalRole
https://bugs.webkit.org/show_bug.cgi?id=40133
Summary AX: need ListItemRole and PresentationalRole
chris fleizach
Reported 2010-06-03 11:24:55 PDT
We need both these roles to be exposed directly to help solve https://bugs.webkit.org/show_bug.cgi?id=40132
Attachments
Patch (5.82 KB, patch)
2010-06-03 11:46 PDT, chris fleizach
no flags
patch (7.62 KB, patch)
2010-06-07 14:22 PDT, chris fleizach
no flags
patch (7.66 KB, text/plain)
2010-06-07 14:26 PDT, chris fleizach
no flags
patch (7.68 KB, patch)
2010-06-07 14:30 PDT, chris fleizach
darin: review-
patch (6.74 KB, patch)
2010-06-14 09:35 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2010-06-03 11:30:01 PDT
no functional changes. just prep work
chris fleizach
Comment 2 2010-06-03 11:46:03 PDT
WebKit Review Bot
Comment 3 2010-06-03 20:31:24 PDT
chris fleizach
Comment 4 2010-06-07 14:22:57 PDT
Created attachment 58083 [details] patch this should hopefully work for chomium too
chris fleizach
Comment 5 2010-06-07 14:26:20 PDT
Created attachment 58084 [details] patch now with correct changelogs
chris fleizach
Comment 6 2010-06-07 14:30:17 PDT
Created attachment 58086 [details] patch for some reason the last patch didn't take
chris fleizach
Comment 7 2010-06-07 14:38:09 PDT
weird only details is showing up
Darin Adler
Comment 8 2010-06-12 19:12:28 PDT
Comment on attachment 58086 [details] patch > +Node* AccessibilityRenderObject::node() const > +{ > + if (!m_renderer) > + return 0; > + return m_renderer->node(); > +} What is this function for? It's added in the patch and not used. The patch otherwise seems great. review- because of the seemingly-unrelated change.
chris fleizach
Comment 9 2010-06-14 09:29:01 PDT
(In reply to comment #8) > (From update of attachment 58086 [details]) > > +Node* AccessibilityRenderObject::node() const > > +{ > > + if (!m_renderer) > > + return 0; > > + return m_renderer->node(); > > +} > > What is this function for? It's added in the patch and not used. > > The patch otherwise seems great. review- because of the seemingly-unrelated change. That was part of the follow up patch. Forgot to take it out of this one
chris fleizach
Comment 10 2010-06-14 09:35:16 PDT
Created attachment 58664 [details] patch Patch is same as before, but removes the not necessary node() function from this patch
Darin Adler
Comment 11 2010-06-14 13:54:11 PDT
Comment on attachment 58664 [details] patch > + (WebCore::): Lines like this should be deleted from the ChangeLog. And we should fix prepare-ChangeLog to not generate them. > + (RoleEntry::): Ditto.
chris fleizach
Comment 12 2010-06-14 14:48:51 PDT
Eric Seidel (no email)
Comment 13 2010-06-14 20:15:41 PDT
Seems to have caused a Gtk API test regression: ERROR:../../WebKit/gtk/tests/testatkroles.c:98:get_child_and_test_role: assertion failed: (child_role == role)
Eric Seidel (no email)
Comment 14 2010-06-14 20:16:14 PDT
Sheriffbot didn't notice because the buildbot seems to have not been notified of this revision. Not sure why or how.
chris fleizach
Comment 15 2010-06-14 22:53:36 PDT
(In reply to comment #14) > Sheriffbot didn't notice because the buildbot seems to have not been notified of this revision. Not sure why or how. hopefully i can fix this tonite
chris fleizach
Comment 16 2010-06-14 23:51:06 PDT
Note You need to log in before you can comment on or make changes to this bug.