AX: need ListItemRole and PresentationalRole https://bugs.webkit.org/show_bug.cgi?id=40133

Reviewed by Darin Adler.

WebCore:

* accessibility/AccessibilityObject.cpp:
(WebCore::createARIARoleMap):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isListItem):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeNames]):

WebKit/chromium:

* public/WebAccessibilityRole.h:
* src/AssertMatchingEnums.cpp:



Canonical link: https://commits.webkit.org/52161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61151 268f45cc-cd09-0410-ab3c-d52691b4dbfc